--- a/data/config.properties
+++ b/data/config.properties
@@ -9,5 +9,5 @@ IPAddress=http://server:4444/wd/hub
 
 #Drivers
 IEDriver=./drivers/IEDriverServer.exe
-ChromeDriverWindows=\drivers\chromedriver.exe
+ChromeDriverWindows=\\drivers\\chromedriver.exe
 GeckoDriverWindows=./drivers/geckodriver.exe
